--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>KDE Graph</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>KDE Plot</title>
 </head>
 <body>
-    <h3>Our Flask Buttons</h3>
-    <form method="post" action="/static">
-        <input type="submit" value="VALUE1" name="action1"/>
-        <input type="submit" value="VALUE2" name="action2" />
-    </form>
+<h1>Upload new File</h1>
+<form method=post enctype=multipart/form-data>
+  <p><input type=file name=file>
+     <input type=submit value=Upload>
+</form>
 </body>
 </html>
