--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body class="bg-light">
 
     <div class="container mt-5">
-        <h1 class="text-center mb-4">Kernel Density Estimation (KDE)</h1>
+        <h1 class="text-center mb-4">PDP Plotter</h1>
 
         <form method="post" action="/" enctype="multipart/form-data" id="fileForm" class="mb-4">
             <div class="mb-3">
@@ -21,7 +21,6 @@
 
         {% if graph_data %}
             <div class="text-center">
-                <h2 class="mt-4">Kernel Density Estimation Plot</h2>
                 <div>{{ graph_data|safe }}</div>
                 <!-- Download buttons -->
                 <div class="mt-3">
