--- a/templates/index.html
+++ b/templates/index.html
@@ -1,46 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>PDP Plotter</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>dz Tools</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='/DZ.ico') }}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-<body class="bg-light">
-
-    <div class="container mt-5">
-        <h1 class="text-center mb-4">PDP Plotter</h1>
-
-        <form method="post" action="/" enctype="multipart/form-data" id="fileForm" class="mb-4">
-            <div class="mb-3">
-                <label for="file" class="form-label">Choose an Excel file (.xlsx or .xls)</label>
-                <input type="file" name="file" class="form-control" id="file" accept=".xlsx, .xls" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Upload and Plot</button>
-        </form>
-
-        {% if graph_data %}
-            <div class="text-center">
-                <div>{{ graph_data|safe }}</div>
-                <!-- Download buttons -->
-                <div class="mt-3">
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                            Download
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/download?format=png">PNG</a></li>
-                            <li><a class="dropdown-item" href="/download?format=svg">SVG</a></li>
-                            <li><a class="dropdown-item" href="/download?format=pdf">PDF</a></li>
-                            <li><a class="dropdown-item" href="/download?format=eps">EPS</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        {% endif %}
+<body class="container mt-5">
+<h1 class="display-4">DZtools</h1>
+    <div class="row">
+        <div class="col-md-8">
+            <a href="pdp/" class="btn btn-primary">PDP Plotter</a>
+            <a href="kde/" class="btn btn-primary">KDE Plotter</a>
+        </div>
     </div>
-    <br />
-    <br />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
