--- a/templates/index.html
+++ b/templates/index.html
@@ -4,18 +4,105 @@
     <title>dz Tools</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='/DZ.ico') }}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style>
+        body {
+            background: linear-gradient(to bottom, #000000, #001f3f);
+            color: white;
+            min-height: 100vh;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .navbar {
+            background-color: #001f3f;
+        }
+
+        .navbar-light .navbar-brand {
+            color: cyan;
+        }
+
+        .navbar-light .navbar-nav .nav-link {
+            color: cyan;
+        }
+
+        .navbar-light .navbar-brand:hover {
+            color: white;
+        }
+
+        .navbar-light .navbar-nav .nav-link:hover {
+            color: white;
+        }
+
+        .container {
+            flex: 1;
+        }
+
+        .navbar-brand img {
+            margin-right: 5px;
+        }
+
+            /* Custom CSS for color changes */
+        #dztools-link {
+            color: cyan !important; /* Set the default color to cyan */
+        }
+
+        #dztools-link.active {
+            color: cyan !important; /* Keep the color cyan when clicked */
+        }
+
+        #dztools-link:hover {
+            color: white !important; /* Change color to white on hover */
+        }
+    </style>
 </head>
-<body class="container mt-5">
-<h1 class="display-4">DZtools</h1>
-    <div class="row">
-        <div class="col-md-8">
-            <a href="pdp/" class="btn btn-primary">PDP Plotter</a>
-            <a href="kde/" class="btn btn-primary">KDE Plotter</a>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a id="dztools-link" href="#" class="nav-link">
+            <img src="{{ url_for('static', filename='/DZ.ico') }}" alt="DZ.ico" style="width: 64px; height: 64px;">
+            DZtools
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="pdp/" id="dztools-link">PDP Plotter</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="kde/">KDE Plotter</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="dz_stats/">DZstats</a>
+                </li>
+            </ul>
         </div>
+    </nav>
+
+    <div class="container mt-5">
+        <h1 class="display-4">DZtools</h1>
+        <p class="lead">Web-based analytics for detrital zircon data</p>
+        <br />
+        <br />
+        <h3>Section 1</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac libero vel libero tincidunt lacinia et sit amet ex.</p>
+
+        <h3>Section 2</h3>
+        <p>Curabitur facilisis, dui vel fermentum facilisis, justo magna vestibulum mi, nec fringilla turpis nisl vel metus.</p>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script>
+    // Custom JavaScript to handle color change on click
+    const dztoolsLink = document.getElementById('dztools-link');
+
+    dztoolsLink.addEventListener('click', function(event) {
+        event.preventDefault();
+        this.classList.add('active');
+    });
+</script>
 </body>
 </html>
