--- a/templates/dz_stats.html
+++ b/templates/dz_stats.html
@@ -3,23 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>PDP Plotter</title>
+    <title>DZstats</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='/DZ.ico') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f8f9fa; /* Bootstrap default background color */
-        }
-
-        .container {
-            max-width: 1000px; /* Set the maximum width of the container */
-            margin: 0 auto; /* Center the container */
-            margin-left: 50px; /* Adjust the left margin as needed */
-            margin-right: 50px;
-        }
-    </style>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/default.css') }}">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <a id="dztools-link" href="{{ url_for('main') }}" class="nav-link mt-1">
+                <img src="{{ url_for('static', filename='/DZ.ico') }}" alt="DZ.ico" style="width: 64px; height: 64px;">
+                DZtools
+            </a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/pdp/">PDP Plotter</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/kde/">KDE Plotter</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/dz_stats/">DZstats</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <div class="container mt-5">
         <h1 class="text-left mb-4">DZstats</h1>
         <form method="post" action="/dz_stats/" enctype="multipart/form-data" id="fileForm" class="mb-4">
@@ -29,8 +37,8 @@
             </div>
             <button type="submit" class="btn btn-primary">Upload and Plot</button>
         </form>
-        <div class="row">
-            <div class="col-md-9">
+        <div class="col-md-9">
+            <div class="row">
                 {% if graph_data %}
                     <div class="text-left">
                         <div>{{ graph_data|safe }}</div>
@@ -38,7 +46,7 @@
                         <div class="mt-3">
                             <div class="btn-group">
                                 <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Download Graph
+                                    Download KDE
                                 </button>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="/download_graph?format=png">PNG</a></li>
@@ -51,7 +59,8 @@
                     </div>
                 {% endif %}
             </div>
-            <div class="col-md-4">
+            <br />
+            <div class="row">
                 {% if cdf_data %}
                     <div class="text-left">
                         <div>{{ cdf_data|safe }}</div>
