--- a/templates/kde.html
+++ b/templates/kde.html
@@ -6,12 +6,31 @@
     <title>KDE Plotter</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='/DZ.ico') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/default.css') }}">
 </head>
-<body class="bg-light">
-
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <a id="dztools-link" href="{{ url_for('main') }}" class="nav-link mt-1">
+                <img src="{{ url_for('static', filename='/DZ.ico') }}" alt="DZ.ico" style="width: 64px; height: 64px;">
+                DZtools
+            </a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/pdp/">PDP Plotter</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/kde/">KDE Plotter</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/dz_stats/">DZstats</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <div class="container mt-5">
         <div class="row">
-        <h1 class="text-center mb-4">KDE Plotter</h1>
+        <h1 class="text-left mb-4">KDE Plotter</h1>
             <div class="col-md-8">
                 <form method="post" action="/kde/" enctype="multipart/form-data" id="fileForm" class="mb-4">
                     <div class="mb-3">
