--- a/templates/kde.html
+++ b/templates/kde.html
@@ -50,10 +50,10 @@
                                     Download
                                 </button>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/download_graph?format=png">PNG</a></li>
-                                    <li><a class="dropdown-item" href="/download_graph?format=svg">SVG</a></li>
-                                    <li><a class="dropdown-item" href="/download_graph?format=pdf">PDF</a></li>
-                                    <li><a class="dropdown-item" href="/download_graph?format=eps">EPS</a></li>
+                                    <li><a class="dropdown-item" href="/download_kde?format=png">PNG</a></li>
+                                    <li><a class="dropdown-item" href="/download_kde?format=svg">SVG</a></li>
+                                    <li><a class="dropdown-item" href="/download_kde?format=pdf">PDF</a></li>
+                                    <li><a class="dropdown-item" href="/download_kde?format=eps">EPS</a></li>
                                 </ul>
                             </div>
                         </div>
