--- a/templates/pdp.html
+++ b/templates/pdp.html
@@ -49,10 +49,10 @@
                                     Download Graph
                                 </button>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/download_graph?format=png">PNG</a></li>
-                                    <li><a class="dropdown-item" href="/download_graph?format=svg">SVG</a></li>
-                                    <li><a class="dropdown-item" href="/download_graph?format=pdf">PDF</a></li>
-                                    <li><a class="dropdown-item" href="/download_graph?format=eps">EPS</a></li>
+                                    <li><a class="dropdown-item" href="/download_pdp?format=png">PNG</a></li>
+                                    <li><a class="dropdown-item" href="/download_pdp?format=svg">SVG</a></li>
+                                    <li><a class="dropdown-item" href="/download_pdp?format=pdf">PDF</a></li>
+                                    <li><a class="dropdown-item" href="/download_pdp?format=eps">EPS</a></li>
                                 </ul>
                             </div>
                         </div>
