--- a/templates/index.html
+++ b/templates/index.html
@@ -35,11 +35,13 @@
         <p class="lead">Web-based data visualization and interpretation for detrital zircon geochronology data</p>
         <br />
         <br />
+
         <h3>Updates</h3>
-        <p>none</p>
+        <p>DZstats Web is live! Click the link in the banner to try it out.</p>
 
         <h3>How-To</h3>
-        <p>none</p>
+        <p>To use our tools for detrital zircon, please make sure you are using 2-sigma uncertainties in your data.</p>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
