Fixed more navbar resize problems. Added a custom script in the html files.

--- a/templates/dz_stats.html
+++ b/templates/dz_stats.html
@@ -9,7 +9,7 @@
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/default.css') }}">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="width:200%;">
+    <nav id="nbar" class="navbar navbar-expand-lg navbar-light" style="width:115%;">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <img src="{{ url_for('static', filename='/menu.ico') }}" alt="Menu" class="navbar-toggler-icon">
         </button>
@@ -199,6 +199,17 @@
         </div>
     <br />
     <br />
+    <script>
+      // Adjust the navbar width based on the content width
+      function adjustNavbarWidth() {
+        var contentWidth = document.documentElement.scrollWidth || document.body.scrollWidth;
+        document.getElementById('nbar').style.width = contentWidth + 50 + 'px';
+      }
+
+      // Call the function initially and on window resize
+      window.addEventListener('resize', adjustNavbarWidth);
+      adjustNavbarWidth();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
