--- a/templates/index.html
+++ b/templates/index.html
@@ -10,13 +10,20 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav id="nbar" class="navbar navbar-expand-lg navbar-light" style="width:100vw;">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <img src="{{ url_for('static', filename='/menu.ico') }}" alt="Menu" class="navbar-toggler-icon">
+        </button>
+
+        <a id="dztools-link" href="#" class="nav-link mt-1 navbar-icon">
+            <img src="{{ url_for('static', filename='/DZ.ico') }}" alt="DZ.ico">
+            DZtools
+        </a>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <a id="dztools-link" href="#"  class="nav-link mt-1">
-                <img src="{{ url_for('static', filename='/DZ.ico') }}" alt="DZ.ico" style="width: 64px; height: 64px;">
-                DZtools
-            </a>
             <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a id="dztools-link" href="#" class="nav-link usually-hidden">DZtools</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/pdp/">PDP Plotter</a>
                 </li>
@@ -44,17 +51,17 @@
 
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script>
-    // Custom JavaScript to handle color change on click
-    const dztoolsLink = document.getElementById('dztools-link');
+    <script>
+      // Adjust the navbar width based on the content width
+      function adjustNavbarWidth() {
+        var contentWidth = document.documentElement.scrollWidth || document.body.scrollWidth;
+        document.getElementById('nbar').style.width = contentWidth + 50 + 'px';
+      }
 
-    dztoolsLink.addEventListener('click', function(event) {
-        event.preventDefault();
-        this.classList.add('active');
-    });
-</script>
+      // Call the function initially and on window resize
+      window.addEventListener('resize', adjustNavbarWidth);
+      adjustNavbarWidth();
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
