--- a/templates/pdp.html
+++ b/templates/pdp.html
@@ -9,13 +9,20 @@
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/default.css') }}">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav id="nbar" class="navbar navbar-expand-lg navbar-light" style="width:115%;">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <img src="{{ url_for('static', filename='/menu.ico') }}" alt="Menu" class="navbar-toggler-icon">
+        </button>
+
+        <a id="dztools-link" href="{{ url_for('main') }}" class="nav-link mt-1 navbar-icon">
+            <img src="{{ url_for('static', filename='/DZ.ico') }}" alt="DZ.ico">
+            DZtools
+        </a>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <a id="dztools-link" href="{{ url_for('main') }}" class="nav-link mt-1">
-                <img src="{{ url_for('static', filename='/DZ.ico') }}" alt="DZ.ico" style="width: 64px; height: 64px;">
-                DZtools
-            </a>
             <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a id="dztools-link" href="{{ url_for('main') }}" class="nav-link usually-hidden">DZtools</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/pdp/">PDP Plotter</a>
                 </li>
@@ -85,6 +92,17 @@
 
     <br />
     <br />
+    <script>
+      // Adjust the navbar width based on the content width
+      function adjustNavbarWidth() {
+        var contentWidth = document.documentElement.scrollWidth || document.body.scrollWidth;
+        document.getElementById('nbar').style.width = contentWidth + 50 + 'px';
+      }
+
+      // Call the function initially and on window resize
+      window.addEventListener('resize', adjustNavbarWidth);
+      adjustNavbarWidth();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
