--- a/templates/dz_stats.html
+++ b/templates/dz_stats.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='/DZ.ico') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/default.css') }}">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </head>
 <body>
     <nav id="nbar" class="navbar navbar-expand-lg navbar-light" style="width:115%;">
@@ -54,21 +55,33 @@
                     </div>
                     <div class="row">
                         <label>Select Graphs:</label>
-                        <label><input type="checkbox" name="kde_graph" value="true" {% if kde_graph == "true" %}checked{% endif %}> KDE Graph</label>
-                        <label><input type="checkbox" name="cdf_graph" value="true" {% if cdf_graph == "true" %}checked{% endif %}> CDF Graph</label>
+                        <div class="row">
+                            <div class="col-md-2">
+                                <label><input type="checkbox" name="kde_graph" value="true" {% if kde_graph %}checked{% endif %}> KDE Graph</label>
+                            </div>
+                            <div class="col-md-1">
+                                <div class="form-check form-switch">
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="checkbox" name="kde_stacked" value="true" {% if kde_stacked %}checked{% endif %}>
+                                        Stacked
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <label><input type="checkbox" name="cdf_graph" value="true" {% if cdf_graph %}checked{% endif %}> CDF Graph</label>
                         <label>Select Matrices:</label>
-                        <label><input type="checkbox" name="similarity_matrix" value="true" {% if similarity_matrix == "true" %}checked{% endif %}> Similarity Matrix</label>
-                        <label><input type="checkbox" name="likeness_matrix" value="true" {% if likeness_matrix == "true" %}checked{% endif %}> Likeness Matrix</label>
-                        <label><input type="checkbox" name="ks_matrix" value="true" {% if ks_matrix == "true" %}checked{% endif %}> KS Matrix</label>
-                        <label><input type="checkbox" name="kuiper_matrix" value="true" {% if kuiper_matrix == "true" %}checked{% endif %}> Kuiper Matrix</label>
-                        <label><input type="checkbox" name="cross_correlation_matrix" value="true" {% if cross_correlation_matrix == "true" %}checked{% endif %}> Cross-Correlation Matrix</label>
+                        <label><input type="checkbox" name="similarity_matrix" value="true" {% if similarity_matrix %}checked{% endif %}> Similarity Matrix</label>
+                        <label><input type="checkbox" name="likeness_matrix" value="true" {% if likeness_matrix %}checked{% endif %}> Likeness Matrix</label>
+                        <label><input type="checkbox" name="ks_matrix" value="true" {% if ks_matrix %}checked{% endif %}> KS Matrix</label>
+                        <label><input type="checkbox" name="kuiper_matrix" value="true" {% if kuiper_matrix %}checked{% endif %}> Kuiper Matrix</label>
+                        <label><input type="checkbox" name="cross_correlation_matrix" value="true" {% if cross_correlation_matrix %}checked{% endif %}> Cross-Correlation Matrix</label>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary">Upload and Plot</button>
+                <button type="submit" class="btn btn-primary">Plot</button>
             </form>
         </div>
         <div class="col-md-9">
-            {% if graph_data  and kde_graph == "true" %}
+            {% if graph_data  and kde_graph %}
             <div class="text-left">
                 <div>{{ graph_data|safe }}</div>
                 <div class="mt-3">
@@ -89,7 +102,7 @@
             <br />
             {% endif %}
 
-            {% if cdf_data and cdf_graph == "true" %}
+            {% if cdf_data and cdf_graph %}
                 <div class="text-left">
                     <div>{{ cdf_data|safe }}</div>
                         <div class="mt-3">
@@ -110,7 +123,7 @@
                 <br />
                 <br />
             {% endif %}
-            {% if similarity_data is not none and similarity_matrix == "true"%}
+            {% if similarity_data is not none and similarity_matrix%}
                 <h3>Similarity Matrix</h3>
                 {{ similarity_data.to_html(classes="table table-bordered table-striped", justify="center").replace('<th>','<th style = "background-color: White;">').replace('<td>','<td style = "background-color: White;">')|safe }}
                 <div class="col-md-3">
@@ -130,7 +143,7 @@
                 <br />
                 <br />
             {% endif %}
-            {% if likeness_data is not none and likeness_matrix == "true"%}
+            {% if likeness_data is not none and likeness_matrix%}
                 <h3>Likeness Matrix</h3>
                 {{ likeness_data.to_html(classes="table table-bordered table-striped", justify="center").replace('<th>','<th style = "background-color: White;">').replace('<td>','<td style = "background-color: White;">')|safe }}
                 <div class="col-md-3">
@@ -150,7 +163,7 @@
                 <br />
                 <br />
             {% endif %}
-            {% if ks_data is not none and ks_matrix == "true" %}
+            {% if ks_data is not none and ks_matrix %}
                 <h3>KS Test Matrix</h3>
                 {{ ks_data.to_html(classes="table table-bordered table-striped", justify="center").replace('<th>','<th style = "background-color: White;">').replace('<td>','<td style = "background-color: White;">')|safe }}
                 <div class="col-md-3">
@@ -170,7 +183,7 @@
                 <br />
                 <br />
             {% endif %}
-            {% if kuiper_data is not none and kuiper_matrix == "true"%}
+            {% if kuiper_data is not none and kuiper_matrix %}
                 <h3>Kuiper Test Matrix</h3>
                 {{ kuiper_data.to_html(classes="table table-bordered table-striped", justify="center").replace('<th>','<th style = "background-color: White;">').replace('<td>','<td style = "background-color: White;">')|safe }}
                 <div class="col-md-3">
@@ -190,7 +203,7 @@
                 <br />
                 <br />
             {% endif %}
-            {% if cross_correlation_data is not none and cross_correlation_matrix == "true"%}
+            {% if cross_correlation_data is not none and cross_correlation_matrix %}
                 <h3>Cross-Correlation Matrix</h3>
                 {{ cross_correlation_data.to_html(classes="table table-bordered table-striped", justify="center").replace('<th>','<th style = "background-color: White;">').replace('<td>','<td style = "background-color: White;">')|safe }}
                 <div class="col-md-3">
